# aht20-esp32c3-std

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
